welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:10: error: not found: value setBurshColor
  setBurshColor(colors(offset))
  ^Array2:28: error: not enough arguments for method drawLine: (colors: Array[java.awt.Color])Unit.
Unspecified value parameter colors.
  	drawLine()
                ^